samples/_failures_safe/1761283837_8bb6e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc0c9b08.c: In function ‘main’:
./samples/SAFE/__tmp_fc0c9b08.c:157:35: error: missing terminating " character
  157 |         int rows2 = get_valid_int("Enter rows
      |                                   ^~~~~~~~~~~
./samples/SAFE/__tmp_fc0c9b08.c:157:9: error: expected expression at end of input
  157 |         int rows2 = get_valid_int("Enter rows
      |         ^~~
./samples/SAFE/__tmp_fc0c9b08.c:157:21: error: too few arguments to function ‘get_valid_int’
  157 |         int rows2 = get_valid_int("Enter rows
      |                     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_fc0c9b08.c:88:5: note: declared here
   88 | int get_valid_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_fc0c9b08.c:157:9: error: expected declaration or statement at end of input
  157 |         int rows2 = get_valid_int("Enter rows
      |         ^~~
./samples/SAFE/__tmp_fc0c9b08.c:157:9: error: expected declaration or statement at end of input
